# myPUHH-FastAPI

./: .gitignore  LICENSE
api/: Dockerfile  README.md  db.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
api/account/: models.py  routers.py  schema.py  schemas.py  serializers.py  views.py
api/angkutan/: models.py  schemas.py  views.py
api/conf/: database.py  tokens.py
api/config/: db.py
api/consts/: index.py
api/cruising/: functions.py  models.py  schemas.py  serializers.py  views.py
api/general/: serializers.py
api/migrations/account/: 0_20230924142315_init.py  1_20230924142753_update.py
api/migrations/models/: 0_20240504060550_init.py  0_20240507203604_init.py  0_20240508133516_init.py  0_20240517210014_init.py  1_20240504074947_update.py  1_20240512181530_update.py  1_20240518005304_update.py  2_20240504082440_update.py  2_20240513051704_update.py  3_20240504125446_update.py  3_20240515102700_update.py  3_20240518012419_update.py  4_20240504132516_update.py  4_20240521081758_update.py  5_20240504135002_update.py  5_20240521103255_update.py  6_20240505045618_update.py  6_20240521123712_update.py  7_20240505052625_update.py  8_20240505053403_update.py  (+1 more)
api/parameter/: models.py  schemas.py  serializers.py  views.py
api/produksi/: models.py  schemas.py  views.py
api/spreadsheet/: models.py  schemas.py  views.py
api/test/: test_main.py
api/umum/: models.py  schemas.py  serializers.py  views.py
api/utils/: decorators.py  exceptions.py  functions.py  initialize.py  pagination.py  storage.py  tokens.py
(+525 files in other folders)
